--- a/index.html
+++ b/index.html
@@ -1,205 +1,294 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profesyonel Web Sitesi</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to right, #1f1c2c, #928dab);
-      color: white;
-      text-align: center;
-      overflow-x: hidden;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kerem Kaya'nın Sitesidir</title>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(to right, #1f1c2c, #4b3a6e);
+    color: white;
+    text-align: center;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+  }
 
-    /* Header */
-    header {
-      position: sticky;
-      top: 0;
-      background: rgba(0,0,0,0.6);
-      backdrop-filter: blur(10px);
-      padding: 20px;
-      z-index: 1000;
-      animation: fadeInDown 1s;
-    }
+  /* Header */
+  header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background: rgba(0,0,0,0.6);
+    backdrop-filter: blur(10px);
+    padding: 20px;
+    z-index: 1000;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: all 0.4s ease;
+  }
 
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
+  header.scrolled {
+    padding: 10px 20px;
+    background: rgba(0,0,0,0.8);
+  }
 
-    nav {
-      margin-top: 10px;
-    }
+  header h1 {
+    margin: 0;
+    font-size: 2.5rem;
+    text-shadow: 2px 2px 5px #000;
+    transition: all 0.4s ease;
+  }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
+  header.scrolled h1 {
+    font-size: 2rem;
+  }
 
-    nav a:hover {
-      color: #ffd700;
-    }
+  nav {
+    margin-top: 10px;
+  }
 
-    /* Buton stili */
-    .btn {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 20px;
-      color: white;
-      background-color: #ff4500;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: 0.3s;
-    }
+  nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
 
-    .btn:hover {
-      background-color: #ffa500;
-    }
+  nav a:hover {
+    color: #ffd700;
+    text-shadow: 1px 1px 5px #000;
+  }
 
-    /* Bölümler */
-    section {
-      padding: 60px 20px;
-      animation: fadeInUp 1s;
-    }
+  /* Buton stili */
+  .btn {
+    display: inline-block;
+    padding: 12px 25px;
+    margin-top: 20px;
+    color: white;
+    background-color: #ff4500;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: 0.4s;
+    font-weight: bold;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  }
 
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
+  .btn:hover {
+    background-color: #ffa500;
+    transform: scale(1.1);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+  }
 
-    /* Kart bölümü */
+  /* Bölümler */
+  section {
+    padding: 60px 20px;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 1s ease;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
+  section.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  section h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 5px #000;
+  }
+
+  /* Kart bölümü */
+  .cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 30px;
+  }
+
+  .card {
+    background: rgba(255,255,255,0.05);
+    padding: 20px;
+    border-radius: 15px;
+    width: 250px;
+    transition: 0.3s;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  }
+
+  .card:hover {
+    transform: translateY(-15px) scale(1.05);
+    background: rgba(255,255,255,0.15);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+  }
+
+  .card img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+
+  /* Slider */
+  .slider {
+    position: relative;
+    max-width: 100%;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 15px;
+    margin: 30px auto;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+  }
+
+  .slides {
+    display: flex;
+    width: 300%;
+    animation: slide 12s infinite;
+  }
+
+  .slides img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  @keyframes slide {
+    0% { transform: translateX(0); }
+    33% { transform: translateX(-100%); }
+    66% { transform: translateX(-200%); }
+    100% { transform: translateX(0); }
+  }
+
+  /* Footer */
+  footer {
+    background-color: rgba(0,0,0,0.85);
+    padding: 20px;
+    margin-top: 30px;
+    box-shadow: 0 -5px 15px rgba(0,0,0,0.3);
+  }
+
+  /* Yakında Gelecek bölümü */
+  .coming-soon {
+    background: rgba(255,255,255,0.05);
+    padding: 80px 20px;
+    margin-top: 50px;
+    border-radius: 15px;
+    text-align: center;
+  }
+
+  .coming-soon h2 {
+    font-size: 2rem;
+    color: #ffdd00;
+    text-shadow: 1px 1px 5px #000;
+  }
+
+  .coming-soon p {
+    font-size: 1.2rem;
+    margin-top: 15px;
+    color: #fff;
+  }
+
+  /* Animasyonlar */
+  @keyframes fadeInDown {
+    from { opacity: 0; transform: translateY(-50px);}
+    to { opacity: 1; transform: translateY(0);}
+  }
+
+  @keyframes fadeInUp {
+    from { opacity: 0; transform: translateY(50px);}
+    to { opacity: 1; transform: translateY(0);}
+  }
+
+  /* Responsive */
+  @media (max-width: 768px) {
     .cards {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
+      flex-direction: column;
+      align-items: center;
     }
-
-    .card {
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 15px;
-      width: 250px;
-      transition: 0.3s;
+    .slider, .slides img {
+      height: 250px;
     }
-
-    .card:hover {
-      transform: translateY(-10px);
-      background: rgba(255,255,255,0.2);
-    }
-
-    /* Slider */
-    .slider {
-      position: relative;
-      max-width: 100%;
-      height: 400px;
-      overflow: hidden;
-      border-radius: 15px;
-      margin: 30px auto;
-    }
-
-    .slides {
-      display: flex;
-      width: 300%;
-      animation: slide 12s infinite;
-    }
-
-    .slides img {
-      width: 100%;
-      height: 400px;
-      object-fit: cover;
-    }
-
-    @keyframes slide {
-      0% { transform: translateX(0); }
-      33% { transform: translateX(-100%); }
-      66% { transform: translateX(-200%); }
-      100% { transform: translateX(0); }
-    }
-
-    /* Footer */
-    footer {
-      background-color: rgba(0,0,0,0.8);
-      padding: 15px;
-      margin-top: 30px;
-      animation: fadeInUp 1s;
-    }
-
-    /* Animasyonlar */
-    @keyframes fadeInDown {
-      from { opacity: 0; transform: translateY(-50px);}
-      to { opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(50px);}
-      to { opacity: 1; transform: translateY(0);}
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .cards {
-        flex-direction: column;
-        align-items: center;
-      }
-      .slider, .slides img {
-        height: 250px;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Benim Profesyonel Sitem</h1>
-    <nav>
-      <a href="#">Ana Sayfa</a>
-      <a href="#">Hakkımızda</a>
-      <a href="#">İletişim</a>
-    </nav>
-  </header>
+<header>
+  <h1>Kerem Kaya’nın Sitesidir</h1>
+  <nav>
+    <a href="#">Ana Sayfa</a>
+    <a href="#">Hakkımızda</a>
+    <a href="#">İletişim</a>
+  </nav>
+</header>
 
-  <section>
-    <h2>Hoş Geldiniz!</h2>
-    <p>Bu site profesyonel görünümlü bir tasarım örneğidir.  
-    Burada yazılarınız, görselleriniz veya projeleriniz olabilir.</p>
-    <a href="#" class="btn">Daha Fazla</a>
+<section class="visible">
+  <h2>Hoş Geldiniz!</h2>
+  <p>Kerem Kaya’nın profesyonel web sitesine hoş geldiniz!  
+  Burada projeleriniz, yazılarınız veya görselleriniz olabilir.</p>
+  <a href="#" class="btn">Daha Fazla</a>
 
-    <!-- Slider -->
-    <div class="slider">
-      <div class="slides">
-        <img src="https://picsum.photos/id/1015/1200/400" alt="Slider 1">
-        <img src="https://picsum.photos/id/1016/1200/400" alt="Slider 2">
-        <img src="https://picsum.photos/id/1018/1200/400" alt="Slider 3">
-      </div>
+  <!-- Slider -->
+  <div class="slider">
+    <div class="slides">
+      <img src="https://picsum.photos/id/1015/1200/400" alt="Slider 1">
+      <img src="https://picsum.photos/id/1016/1200/400" alt="Slider 2">
+      <img src="https://picsum.photos/id/1018/1200/400" alt="Slider 3">
     </div>
+  </div>
 
-    <div class="cards">
-      <div class="card">
-        <h3>Proje 1</h3>
-        <p>Bu projeyi açıklayan kısa bir metin.</p>
-      </div>
-      <div class="card">
-        <h3>Proje 2</h3>
-        <p>Bu projeyi açıklayan kısa bir metin.</p>
-      </div>
-      <div class="card">
-        <h3>Proje 3</h3>
-        <p>Bu projeyi açıklayan kısa bir metin.</p>
-      </div>
+  <!-- Kartlar -->
+  <div class="cards">
+    <div class="card">
+      <img src="https://picsum.photos/id/1040/300/200" alt="Proje 1">
+      <h3>Proje 1</h3>
+      <p>Kerem’in ilk projesi, modern tasarım örneği.</p>
     </div>
-  </section>
+    <div class="card">
+      <img src="https://picsum.photos/id/1050/300/200" alt="Proje 2">
+      <h3>Proje 2</h3>
+      <p>Kerem’in ikinci projesi, yenilikçi ve dikkat çekici.</p>
+    </div>
+    <div class="card">
+      <img src="https://picsum.photos/id/1060/300/200" alt="Proje 3">
+      <h3>Proje 3</h3>
+      <p>Kerem’in üçüncü projesi, şık ve modern bir örnek.</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Tüm Hakları Saklıdır.</p>
-  </footer>
+<!-- Yakında Gelecek Bölümü -->
+<section class="coming-soon">
+  <h2>Yakında Gelecek!</h2>
+  <p>Kerem Kaya’nın yeni projeleri çok yakında bu sitede sizlerle olacak. Takipte kalın!</p>
+</section>
+
+<footer>
+  <p>© 2025 Kerem Kaya. Tüm Hakları Saklıdır.</p>
+</footer>
+
+<script>
+  // Menü küçültme animasyonu ve scroll ile fade-in
+  window.addEventListener('scroll', function() {
+    const header = document.querySelector('header');
+    if(window.scrollY > 50) {
+      header.classList.add('scrolled');
+    } else {
+      header.classList.remove('scrolled');
+    }
+
+    const sections = document.querySelectorAll('section');
+    sections.forEach(sec => {
+      const rect = sec.getBoundingClientRect();
+      if(rect.top < window.innerHeight - 100) {
+        sec.classList.add('visible');
+      }
+    });
+  });
+</script>
 </body>
 </html>
